# openai-chat-web

./: Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  ci.yml
openai_chat_web/: __init__.py  agent.py  cli.py  history.py  model.py  token.py  tool.py
tests/: __init__.py  test_history.py  test_openai_chat_web.py
