[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai_chat_web"
description = "chat with web search"
dependencies = [
  "openai>=0.28.0",
  "langchain>=0.0.281",
  "duckduckgo-search>=3.8.5",
  "pkommand@git+https://github.com/berquerant/pkommand.git@0.4.1#egg=pkommand",
]

readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers"
]
keywords = ["openai_chat_web"]

[project.urls]
repository = "https://github.com/berquerant/openai-chat-web"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[project.scripts]
openai_chat_web = "openai_chat_web.cli:main"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
ignore = [
  "E203",
  "W503",
  "W504"
]
statistics = true

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"